Refactored: common functions now versioned under routers

--- a/src/static/css/routers_v2.css
+++ b/src/static/css/routers_v2.css
@@ -1,5 +1,5 @@
 /* V2 Router-specific styles */
-/* Used by: demorouter.py, future V2 routers */
+/* Used by: demorouter1.py (self-contained version), future V2 routers */
 
 /* Toast Notifications */
 #toast-container {
